make primary components

--- a/src/index.css
+++ b/src/index.css
@@ -170,7 +170,6 @@ font-weight: 600;
   /* clear: both; */
 }
 body {
-  margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
@@ -178,4 +177,8 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+#category option{
+  background-color: rgb(71, 71, 71);
+  color: #fff;
 }
