build components and add router

--- a/src/index.css
+++ b/src/index.css
@@ -20,9 +20,18 @@ body{
 }
 .wrapper{
   max-width: 30rem;
-  margin:4rem auto;
-  /* display: flex;
-  flex-direction: column; */
+  margin:4rem auto 0;
+ height: 100%;
+align-content: stretch;
+}
+.backButton{
+  position: relative;;
+ top: 2rem;
+ left: -5rem;
+ text-decoration: none;
+}
+.backButton img{
+  vertical-align: middle;
 }
 .bg-dark{
   background-color: rgb(0, 0, 0);
@@ -59,7 +68,7 @@ outline:none;
 background-color: #ddd;
 padding:.6rem 1rem;
 border-radius: 4px;
-
+margin-bottom: 4rem;
 }
 .add-transaction{
   display: flex;
@@ -76,6 +85,11 @@ font-weight: 600;
 .Transaction-button img{
   max-width: 11px;
   margin-right: 6px;
+}
+.text-center{
+  text-align: center;
+  color: gray;
+  margin: 1rem auto 8rem;
 }
 .form-enter{
   background-color: #fff;
@@ -164,11 +178,12 @@ font-weight: 600;
 .caption-footer{
   position: relative;
   margin-top: 4rem;
-  bottom: 1rem;
+  bottom:1rem;
   left: calc(50% - 9rem);
-  color: rgb(160, 160, 160);
-  /* clear: both; */
+  z-index: 100;
+  color: gray;
 }
+
 body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
