--- a/src/index.css
+++ b/src/index.css
@@ -175,6 +175,11 @@ font-weight: 600;
   font-size: 0.8em;
   color: rgb(0, 177, 0);
 }
+.saving .red{
+  font-weight: 600;
+  font-size: 0.8em;
+  color: rgb(245, 28, 64);
+}
 .caption-footer{
   position: relative;
   margin-top: 4rem;
